[FIX] Correct booking error and rename variables for clarity
Fixed an error in the booking process.
 Renamed variables to improve code readability and maintainability.