@@ -94,24 +94,23 @@ public class RoomController {
 
     private RoomResponse getRoomResponse(Room room) {
         List<BookedRoom> bookings = getAllBookingsByRoomId(room.getId());
-        /*List<BookingResponse> bookingInfo = bookings.stream()
-                .map(booking -> new BookingResponse(booking.getId(),
+        List<BookingResponse> bookingInfo = bookings
+                .stream()
+                .map(booking -> new BookingResponse(booking.getBookingId(),
                         booking.getCheckInDate(),
-                        booking.getCheckOutDate(),
-                        booking.getBookingConfirmationCode()))
-                .collect(Collectors.toList()); */
+                        booking.getCheckOutDate(), booking.getBookingConfirmationCode())).toList();
         byte[] photoBytes = null;
         Blob photoBlob = room.getPhoto();
         if (photoBlob != null) {
             try {
                 photoBytes = photoBlob.getBytes(1, (int) photoBlob.length());
             } catch (SQLException e) {
-                throw new PhotoRetrievalException("Failed to retrieve photo for room with id: " + room.getId());
+                throw new PhotoRetrievalException("Error retrieving photo");
             }
         }
         return new RoomResponse(room.getId(),
-                room.getRoomType(),
-                room.getRoomPrice(), room.isBooked(), photoBytes);
+                room.getRoomType(), room.getRoomPrice(),
+                room.isBooked(), photoBytes, bookingInfo);
     }
 
     private List<BookedRoom> getAllBookingsByRoomId(Long roomId) {
